@@ -79,7 +79,7 @@ sub VNEdit {
   return $self->ResDenied if !$self->AuthCan('edit') || ($v->{locked} && !$self->AuthCan('lock'));
   
   my %b4 = $id ? (
-    ( map { $_ => $v->{$_} } qw| title desc alias img_nsfw length l_wp l_encubed l_renai l_vnn | ),
+    ( map { $_ => $v->{$_} } qw| title original desc alias img_nsfw length l_wp l_encubed l_renai l_vnn | ),
     relations => join('|||', map { $_->{relation}.','.$_->{id}.','.$_->{title} } @{$v->{relations}}),
     categories => join(',', map { $_->[0].$_->[1] } sort { $a->[0] cmp $b->[0] } @{$v->{categories}}),
     anime => join(' ', sort { $a <=> $b } map $_->{id}, @{$v->{anime}}),
@@ -90,6 +90,7 @@ sub VNEdit {
   if($self->ReqMethod() eq 'POST') {
     $frm = $self->FormCheck(
       { name => 'title', required => 1, maxlength => 250 },
+      { name => 'original', required => 0, maxlength => 250 },
       { name => 'alias', required => 0, maxlength => 500, default => '' },
       { name => 'desc', required => 1, maxlength => 10240 },
       { name => 'length', required => 0, enum => [ 0..($#$VNDB::VNLEN+1) ], default => 0 },
@@ -114,7 +115,7 @@ sub VNEdit {
     $frm->{screenshots} = join ' ', map sprintf('%d,%d,%d', $$_[0], $$_[1]?1:0, $$_[2]||0), sort { $$a[0] <=> $$b[0] } @$screenshots;
 
     return $self->ResRedirect('/v'.$id, 'post')
-      if $id && !$self->ReqParam('img') && 13 == scalar grep { $b4{$_} eq $frm->{$_} } keys %b4;
+      if $id && !$self->ReqParam('img') && 14 == scalar grep { $b4{$_} eq $frm->{$_} } keys %b4;
 
    # upload image
     my $imgid = 0;
@@ -147,7 +148,7 @@ sub VNEdit {
     }
 
     my %args = (
-      ( map { $_ => $frm->{$_} } qw| title desc alias comm length l_wp l_encubed l_renai l_vnn img_nsfw| ),
+      ( map { $_ => $frm->{$_} } qw| title original desc alias comm length l_wp l_encubed l_renai l_vnn img_nsfw| ),
       image => $imgid,
       anime => $anime,
       relations => $relations,
@@ -405,7 +406,7 @@ sub VNUpdReverse { # old, new, id, cid, rev
       uid => 1,         # Multi - hardcoded
       anime => [ map $_->{id}, @{$r->{anime}} ],
       screenshots => [ map [ $_->{id}, $_->{nsfw}, $_->{rid} ], @{$r->{screenshots}} ],
-      ( map { $_ => $r->{$_} } qw| title desc alias categories img_nsfw length l_wp l_encubed l_renai l_vnn image | )
+      ( map { $_ => $r->{$_} } qw| title original desc alias categories img_nsfw length l_wp l_encubed l_renai l_vnn image | )
     );
   }
 
