@@ -10,6 +10,7 @@ TODO:
 1.23 - ?
 	- Removed redirects for old revision URLs (the code wasn't very secure...)
 	- Fixed bug when using unicode in the AJAX vn/producers/release search box
+	- Added original title field to VN entries
 
 1.22 - 2008-08-29 (r106)
 	- Inverted vote graph
